# mba-python

./: README.md
.github/: CODEOWNERS
tepper_stats/: README.md  pyproject.toml
tepper_stats/tepper_stats/: __init__.py  coefficients.py  distribution.py  ramsey.py  summary.py
tepper_stats/tepper_stats/confidence_intervals/: __init__.py  confidence_intervals.py
tepper_stats/tepper_stats/plot/: __init__.py  histogram.py  scatter.py
tepper_stats/tests/: conftest.py  test_coefficients.py  test_distribution.py  test_ramsey.py  test_summary.py
tepper_stats/tests/data/: Beer_Data.xlsx  Refrigerator_Data.xlsx
tepper_stats/tests/plot/: test_scatter.py
tutorials/: README.md  data.md  models.md  plotting.md  setup.md
tutorials/examples/: simple_notebook.ipynb  simple_script.py
