[tool.poetry]
name = "tepper-stats"
version = "0.1.0"
description = ""
authors = ["Nick Png <nkpng2k@gmail.com>"]
readme = "README.md"
packages = [{include = "tepper_stats"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
statsmodels = "^0.14.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
